# sketchy

./: Cargo.toml
benches/: benchmarks.rs
src/: hash.rs  lib.rs  matrix.rs  sketch.rs  utils.rs
